remember the actual wiggle room per page size

and use this information to track changes in the size options to
not falsely switch to a custom page size.

BUG: 502231